# trading-agents-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  LICENSE  README.md  app.py  dashboard_lib.py  pyproject.toml  requirements-app.txt  requirements.txt  run_dashboard.bat
.github/workflows/: ci.yml
results/: agents_AAPL_metrics.csv  baselines_metrics.csv  ml_metrics.csv  ml_predictions.csv
results/transcripts/: AAPL_2026-03-02.md  AAPL_2026-03-09.md  AAPL_2026-03-16.md  AAPL_2026-03-23.md  AAPL_2026-03-30.md  AAPL_2026-04-07.md  AAPL_2026-04-14.md  AAPL_2026-04-21.md  AAPL_2026-04-28.md  AAPL_2026-05-05.md  AAPL_2026-05-12.md  AAPL_2026-05-19.md  AAPL_2026-05-27.md
scripts/: make_figures.py
src/tradinglab/: __init__.py  cli.py  config.py  plotting.py
src/tradinglab/agents/: graph.py  llm.py  probe.py  prompts.py  roles.py  state.py
src/tradinglab/backtest/: baselines.py  engine.py  metrics.py
src/tradinglab/data/: fundamentals.py  news.py  prices.py
src/tradinglab/features/: dataset.py  indicators.py
src/tradinglab/models/: ml.py
tests/: test_agents_backtest.py  test_dataset.py  test_engine.py  test_indicators.py  test_metrics.py  test_probe.py
